Fix hero image overflow bug

--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -4,6 +4,10 @@
     &-hero {
         margin-bottom: 1rem;
 
+        img {
+            max-width: 700px;
+        }
+
         small {
             display: block;
             font-family: $pingFang;
